[package]
name = "weeks-from-now"
version = "0.1.3"
description = "Show a date x weeks from now"
repository = "https://github.com/tshepang/weeks-from-now"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "date-and-time"]
authors = ["Tshepang Mbambo <tshepang@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"

[dependencies.clap]
version = "3"
features = [
  "derive",
]
