[package]
name = "weeks-from-now"
version = "0.2.1"
description = "Show a date x weeks from now"
repository = "https://github.com/tshepang/weeks-from-now"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "date-and-time"]
authors = ["Tshepang Mbambo <tshepang@gmail.com>"]
edition = "2021"
rust-version = "1.74"

[dependencies]
chrono = "0.4"

[dependencies.clap]
version = "4"
features = [
  "derive",
  "deprecated",
]
