[package]
name = "weeks-from-now"
version = "0.2.4"
description = "Show a date x weeks from now"
repository = "https://github.com/tshepang/weeks-from-now"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "date-and-time"]
edition = "2021"
rust-version = "1.74"

[dependencies]
jiff = "0.2"

[dependencies.clap]
version = "4"
features = [
  "derive",
  "deprecated",
]
